--- a/_sass/themes/_reveal-default.scss
+++ b/_sass/themes/_reveal-default.scss
@@ -9,27 +9,107 @@ body {
   color: $f-color;
 }
 
-.reveal .controls .navigate-up.enabled {
-    border-bottom-color: rgba(255, 255, 255, 1);
+.slides {
+  &__homepage {
+    > h1 {
+      font-size: 6rem;
+    }
+  }
+
+  &__chapter {
+    &--profile {
+      section {
+        h2 {
+          color: map-get($color-ahs, 'oranje');
+        }
+        ul small {
+          opacity: 0.76;
+          font-size: 1.4rem;
+        }
+      }
+      strong {
+        color: map-get($color-ahs, 'oranje');
+      }
+      .slides__chapter-intro {
+        h2 {
+          color: $bg-color;
+        }
+      }
+    }
+    &--jobs {
+      section {
+        h2 {
+          color: map-get($color-ahs, 'blauw');
+        }
+        ul small {
+          opacity: 0.76;
+          font-size: 1.4rem;
+        }
+      }
+      strong {
+        color: map-get($color-ahs, 'blauw');
+      }
+      .slides__chapter-intro {
+        h2 {
+          color: $bg-color;
+        }
+      }
+    }
+    &--programma {
+      section {
+        h2 {
+          color: map-get($color-ahs, 'groen');
+        }
+        ul small {
+          opacity: 0.76;
+          font-size: 1.4rem;
+        }
+        a {
+          color: map-get($color-ahs, 'groen');
+        }
+      }
+      strong {
+        color: map-get($color-ahs, 'groen');
+      }
+      .slides__chapter-intro {
+        h2 {
+          color: $bg-color;
+        }
+        strong {
+          color: #f4f4f4;
+        }
+      }
+    }
+    &-intro {
+      > h2 {
+        color: $bg-color;
+        font-size: 8rem;
+      }
+    }
+  }
 }
 
-.reveal .controls .navigate-right.enabled {
-    border-left-color: rgba(255, 255, 255, 1);
-}
-
-.reveal .controls .navigate-down.enabled {
-    border-top-color: rgba(255, 255, 255, 1);
-}
-
-.reveal .controls .navigate-left.enabled {
-    border-right-color: rgba(255, 255, 255, 1);
-}
-
-.home-page > h1 {
-  font-size: 6rem;
-}
-
-.chapter-intro > h2 {
-  color: $bg-color;
-  font-size: 8rem;
+.reveal {
+  .controls {
+    .navigate-up {
+      &.enabled {
+        border-bottom-color: rgba(255, 255, 255, 1);
+      }
+    }
+    .navigate-right {
+      &.enabled {
+        border-left-color: rgba(255, 255, 255, 1);
+      }
+    }
+    .navigate-down {
+      &.enabled {
+        border-top-color: rgba(255, 255, 255, 1);
+      }
+    }
+    .navigate-left {
+      &.enabled {
+        border-right-color: rgba(255, 255, 255, 1);
+      }
+    }
+  }
 }
