Update MMP Presentations

--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -20,6 +20,7 @@ $color-ahs: (
   oranje     : #E90,
   groen      : #BC0,
   fuchsia    : #C07,
+  puchsia    : #C07,
   blauw      : #0AC,
   lichtgrijs : #DDD,
   middengrijs: #AAA,
